--- a/trunk/web/creareunion_puntosdeldia.xhtml
+++ b/trunk/web/creareunion_puntosdeldia.xhtml
@@ -33,9 +33,7 @@
                     <div> 
                         <ice:form>
                             <table class="tablaformulario" id="tablareunion">
-                                <tr><td colspan="2"><h1>Datos referidos a la reunión</h1></td></tr>                                
-
-
+                                <tr><td colspan="2"><h1>Datos referidos a la reunión</h1></td></tr>
 
                                 <tr id="trpuntodeldia1" class="puntosdeldia">
                                     <td><div class="labelslogin"><ice:outputLabel for="puntodeldia1">Punto del día 1:</ice:outputLabel></div></td>
@@ -89,11 +87,21 @@
                                     <td><div class="inputslogin"><ice:inputText id="puntodeldia10" value="#{creaReunionBean1.listapuntosdeldia[9]}" maxlength="255"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorpuntodeldia10" for="puntodeldia10"></ice:message></div></td>
                                 </tr>
-                                <ice:inputHidden id="numPuntos" value="1"></ice:inputHidden>
 
+                                <tr>
+                                    <td>
+                                        <ice:commandButton disabled="disabled" action="#{creaReunionBean1.eliminaUltimo}" value="Eliminar último Version ICE" onclick="eliminaPuntoDelDia();"></ice:commandButton>
+                                    </td>
+                                    <td>
+                                        <ice:commandButton action="#{creaReunionBean1.agregarNuevo}" value="Agregar Nuevo Version ICE" onclick="anadePuntoDelDia();"></ice:commandButton>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td rowspan="2">
+                                    <ice:commandButton action="#{creaReunionBean1.contenidoLista}"></ice:commandButton>
+                                    </td>
+                                </tr>
                             </table>
-                            <input id="eliminarultimo" disabled="disabled" type="button"  value="Eliminar último" onclick="eliminaPuntoDelDia();"/>
-                            <input id="agregarnuevo" disabled="" type="button"  value="Agregar Nuevo" onclick="anadePuntoDelDia();"/>
                         </ice:form>
 
                     </div>
