--- a/trunk/web/creareunion_2.xhtml
+++ b/trunk/web/creareunion_2.xhtml
@@ -97,11 +97,86 @@
                                             <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-next.gif" style="border:none;" title="Next Page"></ice:graphicImage>
                                         </f:facet>
                                     </ice:dataPaginator>
-                                    <ice:commandButton id="crearunionpaso2" value="Siguiente paso" action="#{creaReunionBean.creaReunionPaso2}"></ice:commandButton>
+
+                                    <ice:commandButton id="crearunionpaso2anterior" value="Paso anterior" action="#{creaReunionBean.creaReunionPaso2Anterior}"></ice:commandButton>
+                                    <ice:commandButton id="crearunionpaso2" value="Paso siguiente" action="#{creaReunionBean.creaReunionPaso2}"></ice:commandButton>
 
                                 </ice:panelGroup>
                             </ice:panelGroup>
+
+
+                            <table class="tablaformulario" id="tablareunion">
+                                <tr><td colspan="2"><h1>Datos referidos a la reunión</h1></td></tr>
+
+                                <tr id="trpuntodeldia1" class="puntosdeldia">
+                                    <td><div class="labelslogin"><ice:outputLabel for="puntodeldia1">Punto del día 1:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="puntodeldia1" value="#{creaReunionBean.listapuntosdeldia[0]}" required="true" maxlength="255" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
+                                    <td><div class="errorformulario"><ice:message id="errorpuntodeldia1" for="puntodeldia1"></ice:message></div></td>
+                                </tr>
+
+                                <tr id="trpuntodeldia2" class="puntosdeldia" style="#{creaReunionBean.display[1]}" >
+                                    <td><div class="labelslogin"><ice:outputLabel for="puntodeldia2">Punto del día 2:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="puntodeldia2" value="#{creaReunionBean.listapuntosdeldia[1]}" maxlength="255"></ice:inputText></div></td>
+                                    <td><div class="errorformulario"><ice:message id="errorpuntodeldia2" for="puntodeldia2"></ice:message></div></td>
+                                </tr>
+
+                                <tr id="trpuntodeldia3" class="puntosdeldia" style="#{creaReunionBean.display[2]}" >
+                                    <td><div class="labelslogin"><ice:outputLabel for="puntodeldia3">Punto del día 3:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="puntodeldia3" value="#{creaReunionBean.listapuntosdeldia[2]}" maxlength="255"></ice:inputText></div></td>
+                                    <td><div class="errorformulario"><ice:message id="errorpuntodeldia3" for="puntodeldia3"></ice:message></div></td>
+                                </tr>
+
+                                <tr id="trpuntodeldia4" class="puntosdeldia" style="#{creaReunionBean.display[3]}" >
+                                    <td><div class="labelslogin"><ice:outputLabel for="puntodeldia4">Punto del día 4:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="puntodeldia4" value="#{creaReunionBean.listapuntosdeldia[3]}" maxlength="255"></ice:inputText></div></td>
+                                    <td><div class="errorformulario"><ice:message id="errorpuntodeldia4" for="puntodeldia4"></ice:message></div></td>
+                                </tr>
+                                <tr id="trpuntodeldia5" class="puntosdeldia" style="#{creaReunionBean.display[4]}" >
+                                    <td><div class="labelslogin"><ice:outputLabel for="puntodeldia5">Punto del día 5:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="puntodeldia5" value="#{creaReunionBean.listapuntosdeldia[4]}" maxlength="255"></ice:inputText></div></td>
+                                    <td><div class="errorformulario"><ice:message id="errorpuntodeldia5" for="puntodeldia5"></ice:message></div></td>
+                                </tr>
+                                <tr id="trpuntodeldia6" class="puntosdeldia" style="#{creaReunionBean.display[5]}" >
+                                    <td><div class="labelslogin"><ice:outputLabel for="puntodeldia6">Punto del día 6:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="puntodeldia6" value="#{creaReunionBean.listapuntosdeldia[5]}" maxlength="255"></ice:inputText></div></td>
+                                    <td><div class="errorformulario"><ice:message id="errorpuntodeldia6" for="puntodeldia6"></ice:message></div></td>
+                                </tr>
+                                <tr id="trpuntodeldia7" class="puntosdeldia" style="#{creaReunionBean.display[6]}" >
+                                    <td><div class="labelslogin"><ice:outputLabel for="puntodeldia7">Punto del día 7:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="puntodeldia7" value="#{creaReunionBean.listapuntosdeldia[6]}" maxlength="255"></ice:inputText></div></td>
+                                    <td><div class="errorformulario"><ice:message id="errorpuntodeldia7" for="puntodeldia7"></ice:message></div></td>
+                                </tr>
+                                <tr id="trpuntodeldia8" class="puntosdeldia" style="#{creaReunionBean.display[7]}" >
+                                    <td><div class="labelslogin"><ice:outputLabel for="puntodeldia8">Punto del día 8:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="puntodeldia8" value="#{creaReunionBean.listapuntosdeldia[7]}" maxlength="255"></ice:inputText></div></td>
+                                    <td><div class="errorformulario"><ice:message id="errorpuntodeldia8" for="puntodeldia8"></ice:message></div></td>
+                                </tr>
+                                <tr id="trpuntodeldia9" class="puntosdeldia" style="#{creaReunionBean.display[8]}" >
+                                    <td><div class="labelslogin"><ice:outputLabel for="puntodeldia9">Punto del día 9:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="puntodeldia9" value="#{creaReunionBean.listapuntosdeldia[8]}" maxlength="255"></ice:inputText></div></td>
+                                    <td><div class="errorformulario"><ice:message id="errorpuntodeldia9" for="puntodeldia9"></ice:message></div></td>
+                                </tr><tr id="trpuntodeldia10" class="puntosdeldia" style="#{creaReunionBean.display[9]}" >
+                                    <td><div class="labelslogin"><ice:outputLabel for="puntodeldia10">Punto del día 10:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="puntodeldia10" value="#{creaReunionBean.listapuntosdeldia[9]}" maxlength="255"></ice:inputText></div></td>
+                                    <td><div class="errorformulario"><ice:message id="errorpuntodeldia10" for="puntodeldia10"></ice:message></div></td>
+                                </tr>
+
+                                <tr>
+                                    <td>
+                                        <ice:commandButton disabled="#{creaReunionBean.eliminaUltimoDisabled}" action="#{creaReunionBean.eliminaUltimo}" value="Eliminar último Version ICE"></ice:commandButton>
+                                    </td>
+                                    <td>
+                                        <ice:commandButton disabled="#{creaReunionBean.agregaNuevoDisabled}" action="#{creaReunionBean.agregarNuevo}" value="Agregar Nuevo Version ICE"></ice:commandButton>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td rowspan="2">
+                                        <ice:commandButton action="#{creaReunionBean.contenidoLista}" value="Imprimir en consola valores"></ice:commandButton>
+                                    </td>
+                                </tr>
+                            </table>
                         </ice:form>
+
                     </div>
                 </div>
 
