--- a/trunk/web/creareunion_3.xhtml
+++ b/trunk/web/creareunion_3.xhtml
@@ -79,8 +79,75 @@
                         </ice:panelGroup>
                         <ice:commandButton disabled="#{creaReunionBean.eliminaUltimoDisabled}" action="#{creaReunionBean.eliminaUltimo}" value="Eliminar último Version ICE"></ice:commandButton>
                         <ice:commandButton disabled="#{creaReunionBean.agregaNuevoDisabled}" action="#{creaReunionBean.agregarNuevo}" value="Agregar Nuevo Version ICE"></ice:commandButton>
+
+                        <h1> Usuarios disponibles para la reunión</h1>
+                        <ice:dataTable id="usuariosdisponibles"   var="usuarios" value="#{creaReunionBean.filausuariosdisponibles}"
+                                       rows="5" columnClasses="tableCol">
+                            <ice:column>
+                                <ice:rowSelector id="seleccionado"
+
+                                                 value="#{usuarios.seleccionada}"
+                                                 multiple="true"                                 
+                                                 selectionListener="#{creaReunionBean.usuarioSeleccionadaListener}"
+                                                 
+                                                 />
+
+                                <f:facet name="header">
+                                    <ice:outputText id="column1"
+                                                    value="Nombre"/>
+                                </f:facet>
+                                <ice:outputText id="nombreusuario" value="#{usuarios.tipo[1]}"/>
+
+
+                            </ice:column>
+                            <ice:column>
+                                <f:facet name="header">
+                                    <ice:outputText id="column2"
+                                                    value="Apellido 1"/>
+                                </f:facet>
+                                <ice:outputText id="apellido1usuario" value="#{usuarios.tipo[2]}"/>
+                            </ice:column>
+                            <ice:column>
+                                <f:facet name="header">
+                                    <ice:outputText id="column3"
+                                                    value="Apellido 2"/>
+                                </f:facet>
+                                <ice:outputText id="apellido2usuario" value="#{usuarios.tipo[3]}"/>
+                            </ice:column>
+                            <ice:column>
+                                <f:facet name="header">
+                                    <ice:outputText id="column4"
+                                                    value="Empresa"/>
+                                </f:facet>
+                                <ice:outputText id="empresausuario" value="#{usuarios.tipo[5]}"/>
+                            </ice:column>
+                        </ice:dataTable>
+                        <ice:dataPaginator id="paginadorusuariosdisponibles" for="usuariosdisponibles" paginator="true" fastStep="3" paginatorMaxPages="4">
+                            <f:facet name="first">
+                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-first.gif" style="border:none;" title="First Page"></ice:graphicImage>
+                            </f:facet>
+                            <f:facet name="last">
+                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-last.gif" style="border:none;" title="Last Page"></ice:graphicImage>
+                            </f:facet>
+                            <f:facet name="previous">
+                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-previous.gif" style="border:none;" title="Previous Page"></ice:graphicImage>
+                            </f:facet>
+                            <f:facet name="next">
+                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-next.gif" style="border:none;" title="Next Page"></ice:graphicImage>
+                            </f:facet>
+                        </ice:dataPaginator>
+                        <ice:commandButton id="creareunionpaso3atras" value="Paso anterior" action="#{creaReunionBean.creaReunionPaso3Anterior}"></ice:commandButton>
+                        <ice:commandButton id="creareunionfinal" value="Crear reunión" action="#{creaReunionBean.creaReunionFinal}"></ice:commandButton>
+
+
+
+
+
+
                     </ice:form>
                 </div>
+
+
             </ui:define>
 
         </ui:composition>
