--- a/trunk/web/vernotificaciones-ae.xhtml
+++ b/trunk/web/vernotificaciones-ae.xhtml
@@ -91,7 +91,7 @@
                     </c:if>
                     <c:if test="#{false}">
                         <h1>Solicitudes de nuevas reuniones</h1>
-                        <c:forEach 
+                        <!--<c:forEach -->
                     </c:if>
                     <c:if test="#{verNotificacionesAEBean.filasusuariosnuevos.size()==0 and true}">
                         <ice:outputText styleClass="error">Actualmente no tiene notificaciones pendientes</ice:outputText>
